[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/3D Models/Textures/plainDice.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Envirnonment Scripts/Dice.gd" type="Script" id=2]
[ext_resource path="res://Assets/3D Models/more mats/outline.tres" type="Material" id=3]

[sub_resource type="ArrayMesh" id=3]
resource_name = "dice_Cube"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2.00001, 2.00001, 2 ),
"array_data": PoolByteArray( 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 127, 63, 0, 56, 1, 58, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 63, 0, 56, 1, 58, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 63, 0, 56, 1, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 63, 0, 56, 1, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 127, 63, 0, 56, 1, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 63, 0, 56, 1, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 129, 63, 0, 58, 1, 58, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 63, 0, 58, 1, 58, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 63, 0, 58, 1, 58, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 63, 0, 58, 1, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 129, 63, 0, 58, 1, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 63, 0, 58, 1, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 127, 127, 0, 52, 1, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 127, 63, 0, 52, 1, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 0, 63, 255, 55, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 127, 127, 0, 52, 1, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 0, 63, 0, 56, 2, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 127, 63, 0, 52, 1, 56, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 127, 127, 0, 0, 1, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 129, 63, 0, 60, 1, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 0, 63, 0, 58, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 127, 127, 0, 0, 1, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 0, 63, 0, 58, 2, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 129, 63, 0, 60, 1, 56 ),
"array_index_data": PoolByteArray( 1, 0, 20, 0, 14, 0, 1, 0, 7, 0, 20, 0, 10, 0, 19, 0, 6, 0, 10, 0, 23, 0, 19, 0, 21, 0, 12, 0, 18, 0, 21, 0, 15, 0, 12, 0, 16, 0, 9, 0, 3, 0, 16, 0, 22, 0, 9, 0, 5, 0, 8, 0, 2, 0, 5, 0, 11, 0, 8, 0, 17, 0, 0, 0, 13, 0, 17, 0, 4, 0, 0, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=4]
next_pass = ExtResource( 3 )
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=2]

[node name="Dice" type="RigidBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, 0, 0, 0 )
layers = 3
mesh = SubResource( 3 )
skeleton = NodePath("")
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="TestArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="TestArea"]
transform = Transform( 0.0984, 0, 0, 0, 0.0984, 0, 0, 0, 0.0984, 0, 0, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="TestArea" to="." method="_on_TestArea_area_entered"]
[connection signal="area_exited" from="TestArea" to="." method="_on_TestArea_area_exited"]
[connection signal="body_entered" from="TestArea" to="." method="_on_TestArea_body_entered"]
[connection signal="body_exited" from="TestArea" to="." method="_on_TestArea_body_exited"]
